After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678045 - Fix compile-time warnings
Fix compile-time warnings
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other All
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-06-13 17:11 UTC by Bastien Nocera
Modified: 2012-10-11 13:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
droute: Fix compile-time warnings (1.09 KB, patch)
2012-06-13 17:11 UTC, Bastien Nocera
committed Details | Review
Remove empty spi_cache_dispose() function (1.45 KB, patch)
2012-06-13 17:12 UTC, Bastien Nocera
committed Details | Review
Fix unused functions when compiling w/o debug (1.20 KB, patch)
2012-06-13 17:12 UTC, Bastien Nocera
committed Details | Review
Fix compile-time warnings (13.22 KB, patch)
2012-06-13 17:12 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-06-13 17:11:06 UTC
Unused variables and discarding 'const' qualifier.
Comment 1 Bastien Nocera 2012-06-13 17:11:08 UTC
Created attachment 216315 [details] [review]
droute: Fix compile-time warnings
Comment 2 Bastien Nocera 2012-06-13 17:12:01 UTC
Created attachment 216316 [details] [review]
Remove empty spi_cache_dispose() function
Comment 3 Bastien Nocera 2012-06-13 17:12:08 UTC
Created attachment 216317 [details] [review]
Fix unused functions when compiling w/o debug
Comment 4 Bastien Nocera 2012-06-13 17:12:16 UTC
Created attachment 216318 [details] [review]
Fix compile-time warnings

Unused variables, assignment used as truth values and unused functions.
Comment 5 Mike Gorse 2012-06-13 20:20:59 UTC
Why did you remove the emit_event calls from toplevel_added_event_listener and toplevel_removed_event_listener? Was this intentional?
Comment 6 Bastien Nocera 2012-06-14 17:23:06 UTC
(In reply to comment #5)
> Why did you remove the emit_event calls from toplevel_added_event_listener and
> toplevel_removed_event_listener? Was this intentional?

It was intentional, as the functions were unused.
Comment 7 Bastien Nocera 2012-06-14 18:03:17 UTC
Comment on attachment 216318 [details] [review]
Fix compile-time warnings

Attachment 216318 [details] pushed as 17b84f5 - Fix compile-time warnings
Comment 8 Bastien Nocera 2012-10-11 10:50:09 UTC
Any updates on the other 3 patches?
Comment 9 Mike Gorse 2012-10-11 12:49:04 UTC
Comment on attachment 216315 [details] [review]
droute: Fix compile-time warnings

I apologize; I probably meant to accept these patches and forgot to. They all look fine to me. Thanks.
Comment 10 Bastien Nocera 2012-10-11 13:27:33 UTC
All pushed to master, thanks.

Attachment 216315 [details] pushed as 0473224 - droute: Fix compile-time warnings
Attachment 216316 [details] pushed as e169ae3 - Remove empty spi_cache_dispose() function
Attachment 216317 [details] pushed as b1a9edd - Fix unused functions when compiling w/o debug