droute: Fix compile-time warnings

Unused variables and discarding 'const' qualifier.

https://bugzilla.gnome.org/show_bug.cgi?id=678045